{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 49,
  "lineage": "24d7c97a-ecbd-fef1-fb0e-1aaf0addbd67",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ae5979ecd48e1d1",
            "arn": "arn:aws:ec2:eu-west-1:961906078703:elastic-ip/eipalloc-05ae5979ecd48e1d1",
            "domain": "vpc",
            "id": "eipalloc-05ae5979ecd48e1d1",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-75-69-128.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.75.69.128",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1",
            "tags": {
              "Name": "lesson-5-nat-eip"
            },
            "tags_all": {
              "Name": "lesson-5-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:internet-gateway/igw-02a11b309320fbd83",
            "id": "igw-02a11b309320fbd83",
            "owner_id": "961906078703",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-igw"
            },
            "tags_all": {
              "Name": "vpc_terraform-igw"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05ae5979ecd48e1d1",
            "association_id": "eipassoc-05a42c817774227cc",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02d692bc57bcd5a14",
            "network_interface_id": "eni-01ef5d81c92b4aa3a",
            "private_ip": "10.0.1.187",
            "public_ip": "54.75.69.128",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0459d1b1bacec506d",
            "tags": {
              "Name": "lesson-5-nat-gateway"
            },
            "tags_all": {
              "Name": "lesson-5-nat-gateway"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055ce446bf87c6d941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02d692bc57bcd5a14",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-055ce446bf87c6d94",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-055ce446bf87c6d94"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02a11b309320fbd83",
            "id": "r-rtb-0fc6469a50b0e57801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0fc6469a50b0e5780",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-1",
            "route_table_id": "rtb-0fc6469a50b0e5780"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:route-table/rtb-055ce446bf87c6d94",
            "id": "rtb-055ce446bf87c6d94",
            "owner_id": "961906078703",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "vpc_terraform-private-rt"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "rtb-055ce446bf87c6d94",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:route-table/rtb-0fc6469a50b0e5780",
            "id": "rtb-0fc6469a50b0e5780",
            "owner_id": "961906078703",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [],
            "tags": {
              "Name": "vpc_terraform-public-rt"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "rtb-0fc6469a50b0e5780",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0098e763cfa4da77c",
            "region": "eu-west-1",
            "route_table_id": "rtb-055ce446bf87c6d94",
            "subnet_id": "subnet-02be2e391196b3182"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b30125ae1e3f36e",
            "region": "eu-west-1",
            "route_table_id": "rtb-055ce446bf87c6d94",
            "subnet_id": "subnet-097ca5abe8297d248"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3be1c6e797ce356",
            "region": "eu-west-1",
            "route_table_id": "rtb-055ce446bf87c6d94",
            "subnet_id": "subnet-0bf7433197d3d8565"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d66da450422da3f8",
            "region": "eu-west-1",
            "route_table_id": "rtb-0fc6469a50b0e5780",
            "subnet_id": "subnet-0459d1b1bacec506d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06667bd4aead4dbe2",
            "region": "eu-west-1",
            "route_table_id": "rtb-0fc6469a50b0e5780",
            "subnet_id": "subnet-064c1b31628e51787"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e69ff3634962da48",
            "region": "eu-west-1",
            "route_table_id": "rtb-0fc6469a50b0e5780",
            "subnet_id": "subnet-0123fce1cfa5e1e77"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-02be2e391196b3182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02be2e391196b3182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-subnet-1"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-02be2e391196b3182",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-097ca5abe8297d248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097ca5abe8297d248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-subnet-2"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-097ca5abe8297d248",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0bf7433197d3d8565",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf7433197d3d8565",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-private-subnet-3"
            },
            "tags_all": {
              "Name": "vpc_terraform-private-subnet-3"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0bf7433197d3d8565",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0459d1b1bacec506d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0459d1b1bacec506d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-subnet-1"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0459d1b1bacec506d",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-064c1b31628e51787",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064c1b31628e51787",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-subnet-2"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-064c1b31628e51787",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:subnet/subnet-0123fce1cfa5e1e77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0123fce1cfa5e1e77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "961906078703",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-public-subnet-3"
            },
            "tags_all": {
              "Name": "vpc_terraform-public-subnet-3"
            },
            "vpc_id": "vpc-0922e39da420cd8ae"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "subnet-0123fce1cfa5e1e77",
            "region": "eu-west-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:961906078703:vpc/vpc-0922e39da420cd8ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c78a2baacc2a8afa",
            "default_route_table_id": "rtb-0a8f24d16bc57f7a3",
            "default_security_group_id": "sg-0037e30a3f939cbe6",
            "dhcp_options_id": "dopt-059c782b1336c3d80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0922e39da420cd8ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a8f24d16bc57f7a3",
            "owner_id": "961906078703",
            "region": "eu-west-1",
            "tags": {
              "Name": "vpc_terraform-vpc"
            },
            "tags_all": {
              "Name": "vpc_terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "961906078703",
            "id": "vpc-0922e39da420cd8ae",
            "region": "eu-west-1"
          }
        }
      ]
    }
  ]
}